--- a/public/templates/junglepage.html
+++ b/public/templates/junglepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,8 +8,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../css/junglePages.css">
   </head>
-  <body>
-    <div class="container-fluid">
+  <body> -->
+    <div class="container-fluid" id="jungle">
       <div class="row">
         <div class="col-lg-1">
           <div class="left-content">
@@ -23,7 +23,7 @@
             <img src="../images/homepage1.png" id="chat" alt="chat image">
           </div>
           <div class="navbar">
-            <input type="button" id="actionButton1" onclick="document.getElementById('chat').src='../images/homepage2.png'" value="NEXT">
+            <input type="button" id="actionButton1" ng-click="clicked()" value="NEXT">
           </div>
         </div>
         <div class="col-lg-2">
@@ -33,5 +33,5 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
+  <!-- </body>
+</html> -->
