--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="../css/login.css">
-  </head>
-  <body>
+    <title>Login Page</title> -->
+    <!-- <link rel="stylesheet" href="../css/login.css"> -->
+  <!-- </head>
+  <body> -->
     <div class="container">
       <div class="login">
         <form class="log-form">
           <div class="form">
             <span id="headName">
               Username
-            </span><br>
+            </span></br>
             <span>
               <input type="text" id="inputtext" />
-            </span><br>
+            </span></br>
             <span id="headName">
               Password
-            </span><br>
+            </span></br>
             <span >
               <input type="password" id="inputtext" />
-            </span><br>
+            </span></br>
             <span>
-              <input type="button" id="subButton" value="Sign In (As User)">
-              <input type="button" id="subButton1" value="Sign In (As Parent)">
-            </span><br>
+              <input type="button" id="subButton" ng-click="loginFunction()" value="Sign In (As User)"/>
+              <input type="button" id="subButton1" ng-click="loginFunction()" value="Sign In (As Parent)"/>
+            </span></br>
             <span>
               <a href="#" id="recovery">Forgot Password?</a>
             </span>
@@ -33,5 +33,5 @@
         </form>
       </div>
     </div>
-  </body>
-</html>
+  <!-- </body>
+</html> -->
