--- a/public/templates/signUp.html
+++ b/public/templates/signUp.html
@@ -91,7 +91,7 @@
               </span><br>
             </p>
             <span>
-              <input type="button" id="subButton" value="Purchase Your Account">
+              <input type="button" id="subButton" ng-click="signFunction()" value="Purchase Your Account">
             </span>
           </form>
         </div>
