--- a/public/templates/lionDance2modified.html
+++ b/public/templates/lionDance2modified.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -7,179 +7,45 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../components/angular/angular.min.js"></script>
-
-    <!-- <link rel="stylesheet" href="../css/lionDance2.css"> -->
-    <style media="screen">
-    body {
-    background: url('../image/cave2.png') no-repeat center center fixed;
-    background-size: cover;
-    overflow:hidden;
-  }
-
-.top-left-content {
-  width: 120px;
-  height: 120px;
-  background-color: #cccccc;
-  border: 1px solid #cccccc;
-  border-radius: 5px;
-}
-
-.bottom-left-content {
-  width: 100%;
-  height: 800px;
-  margin-top: 10px;
-}
-
-.row {
-  margin-top: 10px;
-}
-
-.top-mid-content {
-  width: 100%;
-  height: 80px;
-}
-
-.bottom-mid-content {
-  width: 100%;
-  height: 720px;
-  margin-top: 10xpx;
-}
-
-.top-right-content {
-  width: 100%;
-  height: 120px;
-}
-
-.bottom-right-content {
-  width: 100%;
-  height: 700px;
-  margin-top: 10px;
-}
-
-#actionButton {
-  margin-left: 30%;
-  border-color: black;
-}
-
-.navbar {
-  float: center;
-  margin-left: 30%;
-}
-
-.bottom-left-content>img {
-  margin: 10px;
-}
-
-#lion {
-  height: 400px;
-  width: 400px;
-  margin-left: 10px;
-}
-
-#chat {
-  margin-left: 10px;
-}
-
-#leftPoint {
-  float: right;
-  display: none;
-}
-#pointing{
-display: none;
-}
-#rightpoint{
-width:320px;;
-height:auto;
-float:left;
-margin-top: 5%;
-}
-
-.subcards{
-width:195px;
-height:194px;
-border: 1px solid black;
-margin:5px;
-}
-
-.headers{
-width: 195px;
-height:30px
-border:2px solid grey;
-background-color: grey;
-text-align: center;
-box-shadow: 1px 1px grey;
-}
-
-#sample {
-  height: 150px;
-  width: 200px;
-  background: url("../image/rock.jpg") no-repeat;
-  background-size: cover;
-  margin-left: 10%;
-}
-.dragSection{
-width: 100%;
-height:auto;
-margin-top: 20%;
-}
-.drags{
-margin-top:10%;
-}
-.gifSample{
-margin-top: 5%;
-width:100%;
-height:auto;
-}
-
-#textStep1,#textStep{
-margin-left: 33%;
-background-color: #cccccc;
-}
-.imgback{
-height:180px;
-width:210px;
-}
-.drop{
-width:195px;
-height: 175px;
-background-color: white;
-}
-    </style>
+    <link rel="stylesheet" href="../css/lionDance2.css">
 
     <script type="text/javascript">
-    var App = angular.module('myApp', [] );
-    App.controller('myController',function ($scope) {
-
-      $scope.images=[{'thumb': 'dance1.png', 'drag': true},{'thumb': 'dance2.png', 'drag': true},{'thumb': 'dance3.png', 'drag': true},{'thumb': 'dance4.png', 'drag': true},
-                         {'thumb': 'dance5.png', 'drag': true},{'thumb': 'dance6.png', 'drag': true},{'thumb': 'dance7.png', 'drag': true},{'thumb': 'dance8.png', 'drag': true}]
-      });
-      $(document).ready(function () {
-        setTimeout(function () {
-          $("#pointing").show(1000);
-        },2000);
-        setTimeout(function () {
-          $("#leftPoint").show(1000);
-        },4000);
-      });
+    $(document).ready(function () {
+      setTimeout(function () {
+        $("#pointing").show(1000);
+      },2000);
+      setTimeout(function () {
+        $("#leftPoint").show(1000);
+      },4000);
+    });
 
         function allowDrop(ev) {
-          !ev.preventDefault();
+            ev.preventDefault();
         }
 
         function drag(ev) {
-          ev.dataTransfer.setData("text", ev.target.id);
+            ev.dataTransfer.setData("text", ev.target.id);
         }
 
         function drop(ev) {
-          ev.preventDefault();
-          var data = ev.dataTransfer.getData("text");
-          ev.target.appendChild(document.getElementById(data));
-        }
+		
+            ev.preventDefault();
+            var data = ev.dataTransfer.getData("text");
+	console.log($(ev.target).hasClass('drop'));
+	console.log($(ev.target).children('img').length);
+//	if( $(ev.target).find('.drop').length < 0)
+	if($(ev.target).hasClass('drop'))
+	{
+            ev.target.appendChild(document.getElementById(data));
+        }else
+	{
+	alert("already having content");
+	}
+}
     </script>
 </head>
 
-<body ng-controller="myController">
+<body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3">
@@ -188,10 +54,37 @@ background-color: white;
 
                     </div>
                     <div class="bottom-left-content">
-                        <div class="dragSection" ng-repeat="image in images">
+                        <div class="dragSection">
                             <div class="col-lg-6">
                                 <div class="imgback">
-                                    <img ng-src="assets/img/{{image.thumb}}" class = "dragStuff" id="{{image.thumb}}" alt="{{image.thumb}}" draggable="true" ondragstart="drag(event)" />
+                                    <img src="../images/dance1.png" id="dance1" alt="Dance Step 1 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                                <div class="imgback">
+                                    <img src="../images/dance2.png" id="dance2" alt="Dance Step 2 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="imgback">
+                                    <img src="../images/dance3.png" id="dance3" alt="Dance Step 3 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                                <div class="imgback">
+                                    <img src="../images/dance4.png" id="dance4" alt="Dance Step 4 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="imgback">
+                                    <img src="../images/dance5.png" id="dance5" alt="Dance Step 5 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                                <div class="imgback">
+                                    <img src="../images/dance6.png" id="dance6" alt="Dance Step 6 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="imgback">
+                                    <img src="../images/dance7.png" id="dance7" alt="Dance Step 7 image" draggable="true" ondragstart="drag(event)" />
+                                </div>
+                                <div class="imgback">
+                                    <img src="../images/dance8.png" id="dance8" alt="Dance Step 8 image" draggable="true" ondragstart="drag(event)" />
                                 </div>
                             </div>
                         </div>
@@ -206,9 +99,9 @@ background-color: white;
 
                   <div class="gifSample">
                       <div id="rightpoint">
-                        <img src="../image/midsign.png" style="display:none;" id="pointing" alt="Rightside Pointing image" />
+                        <img src="../images/midsign.png" style="display:none;" id="pointing" alt="Rightside Pointing image" />
                       </div>
-                      <img src="../image/sampleDance.gif" id="sample" alt="Dance Preview" />
+                      <img src="../images/sampleDance.gif" id="sample" alt="Dance Preview" />
                   </div>
                     <div class="dropSection">
                         <div class="col-lg-3">
@@ -294,8 +187,8 @@ background-color: white;
                     </div>
                 </div>
                 <div class="navbar">
-                    <a href="#"><img src="../image/play.png" id="actionButton" alt="play button" /></a>
-                    <img src="../image/bottommid.png" id="leftPoint" alt="Leftside Pointing image" />
+                    <a href="#"><img src="../images/play.png" id="actionButton" alt="play button" /></a>
+                    <img src="../images/bottommid.png" id="leftPoint" alt="Leftside Pointing image" />
                 </div>
             </div>
             <div class="col-lg-3">
@@ -304,8 +197,8 @@ background-color: white;
 
                     </div>
                     <div class="bottom-right-content">
-                        <img src="../image/lionDanceChat2.png" id="chat" alt="Lion Dance Chat image" />
-                        <img src="../image/lionMascot.png" id="lion" alt="Lion Image" />
+                        <img src="../images/lionDanceChat2.png" id="chat" alt="Lion Dance Chat image" />
+                        <img src="../images/lionMascot.png" id="lion" alt="Lion Image" />
                     </div>
                 </div>
             </div>
