highlight effect added on button and some new changes

--- a/public/templates/junglepage1.html
+++ b/public/templates/junglepage1.html
@@ -1,24 +1,11 @@
-<div class="container-fluid" id="jungle">
-  <div class="row">
-    <div class="col-lg-1">
-      <div class="left-content">
-        <div class="top-left-content">
-          <!-- will be used later,if required to do some changes -->
-        </div>
-      </div>
+<kodabar></kodabar>
+<div class="container-fluid" id="backDrop">
+  <div class="Wrapper">
+    <div class="homepage-message">
+      <img ng-src="images/homepage2.png" id="homepage-chat" alt="home page chat box">
     </div>
-    <div class="col-lg-9">
-      <div class="mid-content">
-        <img src="../images/homepage2.png" id="chat" alt="chat image">
-      </div>
-      <div class="navbar">
-        <input type="button" id="actionButton1" ng-click="clicked()"  value="NEXT">
-      </div>
-    </div>
-    <div class="col-lg-2">
-      <div class="right-content">
-        <!-- will be used later,if required to do some changes -->
-      </div>
+    <div class="bottom">
+      <input type="button" id="homepage-next" ng-click="clicked()" value="NEXT">
     </div>
   </div>
 </div>
