--- a/public/css/junglePages.css
+++ b/public/css/junglePages.css
@@ -1,82 +1,32 @@
-.container-fluid{
+#homepage-next{
+  width:150px;
+  height:80px;
+  border: 4px solid white;
+  border-radius: 8px;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  -webkit-animation-name: greenPulse;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  align-items: center;
+  margin-top: 25%;
+  margin-left: 48%;
+}
+body{
   background: url('../images/junglePage.jpg') no-repeat center center fixed;
   background-size: cover;
+  overflow: hidden;
 }
-.top-left-content{
-  width:120px;
-  height:120px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
+@-webkit-keyframes greenPulse {
+  from { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
+  50% { background-color: #91bd09; -webkit-box-shadow: 0 0 18px #91bd09; }
+  to { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
 }
-.bottom-left-content{
+#homepage-chat{
+  margin-left:55%;
+}
+.Wrapper{
+  height:950px;
   width:100%;
-  height:700px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-.row{
-  margin-top:10px;
-}
-
-.mid-content{
-  width:100%;
-  height:810px;;
-}
-.top-right-content{
-  width:100%;
-  height:120px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-}
-.bottom-right-content{
-  width:100%;
-  height:700px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-#topbar1,#topbar2,#topbar3{
-  height:75px;
-  width:75px;
-  border-radius: 5px;
-  margin-left: 40px;
-  margin-right:20px;
-}
-.progress{
-  margin-top: 2px;
-}
-.progress-bar{
-  border: 1px solid white;
-  background-color: lightgreen;
-}
-#actionButton1{
-  background-color: black;
-  text-align:center;
-  height:60px;
-  width:120px;
-  border-radius: 5px;
-  color: white;
-  border-color: black;
-  margin-right: 20px;
-  margin-left: 30%;
-  font-size: 18px;
-  margin-bottom: 10px;
-  justify-content: center;
-}
-#actionButton2{
-  margin-left: 25px;
-}
-.navbar{
-  float:center;
-  margin-top: 20px;
-  margin-left:30%;
-}
-#chat{
-float:right;
-margin-right: 20px;
 }
