--- a/public/css/lionIntro.css
+++ b/public/css/lionIntro.css
@@ -1,86 +1,37 @@
-#intro{
+#lionIntro{
   background: url('../images/junglePage2.jpg') no-repeat center center fixed;
   background-size: cover;
 }
-.top-left-content{
-  width:120px;
-  height:120px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-}
-.bottom-left-content{
-  width:100%;
-  height:700px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-.row{
-  margin-top:10px;
+@-webkit-keyframes greenPulse {
+  from { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
+  50% { background-color: #91bd09; -webkit-box-shadow: 0 0 18px #91bd09; }
+  to { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
 }
 
-.mid-content{
-  width:100%;
-  height:810px;;
-}
-.top-right-content{
-  width:100%;
-  height:120px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-}
-.bottom-right-content{
-  width:100%;
-  height:700px;
-  background-color:#cccccc;
-  border:1px solid #cccccc;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-#topbar1,#topbar2,#topbar3{
-  height:75px;
-  width:75px;
-  border-radius: 5px;
-  margin-left: 40px;
-  margin-right:20px;
-}
-.progress{
-  margin-top: 2px;
-}
-.progress-bar{
-  border: 1px solid white;
-  background-color: lightgreen;
-}
-#actionButton1,#actionButton3{
-  background-color: black;
-  text-align:center;
+#lion-intro-next{
+  width:150px;
   height:80px;
-  width:140px;
-  border-radius: 5px;
+  border: 4px solid white;
+  border-radius: 8px;
   color: white;
-  border:2px solid white;
-  margin-right: 20px;
-  margin-left: 20px;
-  font-size: 18px;
-  margin-bottom: 10px;
-  justify-content: center;
+  font-size: 24px;
+  text-align: center;
+  -webkit-animation-name: greenPulse;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  margin: 0 2%;
 }
-#actionButton2{
-  margin-left: 25px;
+#lion-intro-previous{
+  width:150px;
+  height:80px;
+  border: 4px solid white;
+  border-radius: 8px;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  background-color: black;
+  margin: 0 2%;
 }
-.navbar{
-  float:center;
-  margin-top: 20px;
-  margin-left:40%;
-}
-#chat{
-margin-left: 33%;
-margin-top: 2%;
-}
-#lion{
-  margin-top: 2%;
-  margin-left: 38%;
+.row{
+  margin-left: 40%;
 }
