--- a/public/templates/junglepage.html
+++ b/public/templates/junglepage.html
@@ -1,37 +1,13 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>3rd layout</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../css/junglePages.css">
-  </head>
-  <body> -->
-    <div class="container-fluid" id="jungle">
-      <div class="row">
-        <div class="col-lg-1">
-          <div class="left-content">
-            <div class="top-left-content">
-              <!-- will be used later,if required to do some changes -->
-            </div>
-          </div>
+
+    <kodabar></kodabar>
+    <div class="container-fluid" id="backDrop">
+      <div class="Wrapper">
+        <div class="homepage-message">
+          <img ng-src="images/homepage1.png" id="homepage-chat" alt="home page chat box">
         </div>
-        <div class="col-lg-9">
-          <div class="mid-content">
-            <img src="../images/homepage1.png" id="chat" alt="chat image">
-          </div>
-          <div class="navbar">
-            <input type="button" id="actionButton1" ng-click="clicked()" value="NEXT">
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="right-content">
-            <!-- will be used later,if required to do some changes -->
-          </div>
+        <div class="bottom">
+          <input type="button" id="homepage-next" ng-click="clicked()" value="NEXT">
         </div>
       </div>
     </div>
-  <!-- </body>
-</html> -->
+  
