--- a/public/templates/signUp.html
+++ b/public/templates/signUp.html
@@ -1,4 +1,4 @@
-
+<!--
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,7 +7,7 @@
     <title>Sign Up Page</title>
     <link rel="stylesheet" href="../css/signup.css">
   </head>
-  <body>
+  <body> -->
     <div class="container">
       <div class="signup">
         <h2>Create your Koda Account</h2>
